--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 *{ font-family: arial, sans-serif;
-  margin: 0;
+  margin: .5px;
   padding: 0;
 }
 body,
@@ -11,12 +11,13 @@ body > div {
   height: 100%;
   display: flex;
   flex-direction: column;
+  margin-bottom: 10em;
 }
 #container > div {
   display: flex;
 }
 #navbar {
-  padding: 2em;
+  padding: 1em;
   justify-content: space-evenly;
   text-align: center;
   background-color: #464646;
@@ -27,7 +28,6 @@ body > div {
   color: white;
   padding: 4em;
 }
-
 
 
 #main-section {
